syntax = "proto3";

package ticket_base;

option go_package = "github.com/Diana-Fox/campus-activity-ticketing-system/ticket_utils/api";

message Image {
    int64 id = 1;
    string img_url = 2;
    int64 target_id = 3;
    int32 sort = 4;
    int32 type = 5;
    int32 category = 6;
    int64 created_time = 7;
    int64 updated_time = 8;
    bool status = 9;
}
message ImageListRequest {
    repeated Image items = 1;
}
service ImageService {
    rpc Create(ImageListRequest) returns (EmptyResponse) {}
    rpc GetById(IdRequest) returns (ImageListResponse) {}
}

message IdRequest {
    int64 target_id = 1;
}

message EmptyResponse {}

message ListRequest {
}

message ImageListResponse {
    repeated Image items = 1;
}